--- a/rpm/python3-argcomplete.yaml
+++ b/rpm/python3-argcomplete.yaml
@@ -8,7 +8,7 @@ URL: https://pypi.org/project/argcomplete/
 Macros:
     - 'int_name;argcomplete'
 Sources:
-    - 'https://files.pythonhosted.org/packages/a/%{int_name}/%{int_name}-%{version}.tar.gz'
+    - '%{name}-%{version}.tar.gz'
 Description: |
 
     Argcomplete provides easy, extensible command line tab completion of
