--- a/rpm/python3-argcomplete.yaml
+++ b/rpm/python3-argcomplete.yaml
@@ -5,8 +5,6 @@ Release: 0
 Group: Applications
 License: Apache-2.0
 URL: https://pypi.org/project/argcomplete/
-Macros:
-    - 'int_name;argcomplete'
 Sources:
     - '%{name}-%{version}.tar.gz'
 Description: |
@@ -25,7 +23,7 @@ Description: |
       Homepage: https://pypi.org/project/argcomplete/
     %endif
 
-SetupOptions: '-q -n %{int_name}-%{version}'
+SetupOptions: '-q -n %{name}-%{version}'
 BuildArch: noarch
 Configure: none
 Builder: python3
