meta: fix license for OBS

--- a/rpm/python3-argcomplete.yaml
+++ b/rpm/python3-argcomplete.yaml
@@ -3,7 +3,7 @@ Summary: Tab complete all the things!
 Version: 2.0.0
 Release: 0
 Group: Applications
-License: Apache-2.0
+License: ASL 2.0
 URL: https://pypi.org/project/argcomplete/
 Sources:
     - '%{name}-%{version}.tar.gz'
